--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ scripts/db.go
 
 # Test binary, built with `go test -c`
 *.test
+*.cfg
+
+# Test input files
+*.in
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
