--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,25 +5,25 @@ linters:
   enable:
     - asciicheck
     - bodyclose
+    - copyloopvar
     - dogsled
     - dupl
+    - err113
     - errcheck
     - exhaustive
-    - exportloopref
     - gochecknoglobals
     - goconst
     - gocritic
     - godot
     - godox
-    - goerr113
     - goheader
-    - gomnd
     - gomodguard
     - goprintffuncname
     - gosimple
     - govet
     - ineffassign
     - misspell
+    - mnd
     - nakedret
     - nolintlint
     - prealloc
@@ -44,7 +44,7 @@ linters-settings:
     strict-append: false
     enforce-err-cuddling: true
 
-  gomnd:
+  mnd:
     # Values always ignored: "1", "1.0", "0" and "0.0"
     # Default: []
     ignored-numbers:
