go1.24, golangci-lint v2.2.0 + updated config

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,6 @@
+version: "2"
 linters:
-  # Enable all available linters.
-  # Default: false
-  disable-all: true
+  default: none
   enable:
     - asciicheck
     - bodyclose
@@ -19,7 +18,6 @@ linters:
     - goheader
     - gomodguard
     - goprintffuncname
-    - gosimple
     - govet
     - ineffassign
     - misspell
@@ -30,30 +28,14 @@ linters:
     - rowserrcheck
     - sqlclosecheck
     - staticcheck
-    - stylecheck
     - testpackage
-    - typecheck
     - unconvert
     - unparam
     - unused
     - whitespace
-    - wsl
-
-linters-settings:
-  wsl:
-    strict-append: false
-    enforce-err-cuddling: true
-
-  mnd:
-    # Values always ignored: "1", "1.0", "0" and "0.0"
-    # Default: []
-    ignored-numbers:
-      - '2'
-      - '0644'
-
-issues:
-  exclude-rules:
-    - path: pkg/favirecon/db.go
-      text: "should be written without leading space as `//nolint: gochecknoglobals`"
-    - path: pkg/output/banner.go
-      text: "should be written without leading space as `//nolint: gochecknoglobals`"
+    - wsl_v5
+  exclusions:
+    rules:
+      - linters:
+          - mnd
+        text: "Magic number: (2|0644)"
