--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,9 +1,9 @@
 name: favirecon
-summary: Use favicon.ico to improve your target recon phase
+summary: Use favicons to improve your target recon phase
 description: |
-      Use favicon.ico to improve your target recon phase. 
+      Use favicons to improve your target recon phase. 
       Quickly detect technologies, WAF, exposed panels, known services.
-version: 1.0.0
+version: 1.0.1
 grade: stable
 base: core20
 
